@@ -22,6 +22,7 @@ ubiquity (1.1.3) UNRELEASED; urgency=low
     now that its use of multi-line SUBSTs has been fixed (closes: Malone
     #47043).
   * Make the rest of the summary text translatable.
+  * Display grub-installer/install_to_xfs question if it's asked.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Jul 2006 08:23:23 +0100
 
